<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hero_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg" >

    <TextView
        android:id="@+id/hero_h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/choose_your_hero"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff"
        android:textSize="30dp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/hero_h2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/your_hero_text"
        android:textColor="#fff"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hero_h1" />


    <LinearLayout
        android:id="@+id/hero_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/lighter_bg"
        android:orientation="horizontal"
        android:padding="15dp"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hero_h2">

        <ImageView
            android:id="@+id/hero_sheriff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/sq_sheriff" />

        <RelativeLayout
            android:id="@+id/hero_contact_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="3"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/hero_contact_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/darker_txt"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hero_contact_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hero_contact_text"
                android:textColor="@color/lighter_txt"
                android:textSize="14dp" />

        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/hero_btn_change"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:background="#3578BB"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"


        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:height="20dp"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hero_body" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"



        >


        <Button
            android:id="@+id/hero_btn_accept"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"


            android:background="#3578BB"

            android:layout_marginRight="8dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/accept" />

        <Button
            android:id="@+id/hero_btn_remove"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            android:background="#3578BB"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/remove" />

    </LinearLayout>






</android.support.constraint.ConstraintLayout>
